# NetDocIT

./: .gitignore  Fixes-roadmap.md  README.md  main.py  pyproject.toml
data/: config.json
src/: main.py
src/backend/: drift.py  (+23 more)
tests/: test_adaptive_scheduler.py  test_arp_parser.py  test_asset_identity_ingestion.py  test_asset_identity_resolver.py  test_asset_identity_storage.py  test_ci_workflow.py  test_cli_command_smoke.py  test_cli_dispatch_branches.py  test_cli_policy_metadata.py  test_cli_profile_flag.py  test_cli_timeout_propagation.py  test_database_connection_lifecycle.py  test_device_ip_sorting.py  test_discovery_abort_signal.py  test_discovery_credential_audit.py  test_discovery_drift_export.py  test_discovery_enrichment_counts_metadata.py  test_discovery_enrichment_result_counts.py  test_discovery_env_timeout.py  test_discovery_health_export.py  test_discovery_host_data_counts_metadata.py  test_discovery_host_enum_timeout.py  test_discovery_interface_persistence.py  test_discovery_probe_metrics.py  test_discovery_profile_metadata.py  test_discovery_profile_timeout.py  test_discovery_provenance_in_exports.py  test_discovery_run_timing.py  test_discovery_safety_abort.py  test_discovery_safety_profiles.py  test_discovery_scan_counts_metadata.py  test_discovery_scan_error_metadata.py  test_discovery_scan_timeout.py  test_discovery_scope_policy.py  test_discovery_subnet_selection.py  test_discovery_timeout_budget.py  test_discovery_timeout_cap.py  test_discovery_timeout_policy_metadata.py  test_discovery_timeout_source.py  test_discovery_timeout_validation.py  (+49 more)
(+18 files in other folders)
