[project]
name = "netdocit"
version = "0.1.0"
description = "Automated network discovery, topology mapping, and inventory reporting for Windows environments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "markdown2>=2.5.5",
    "networkx>=3.6.1",
    "pysnmp>=7.1.15",
    "pyvis>=0.3.2",
    "rich>=14.3.3"
]

[project.scripts]
netdocit = "src.main:main"

[tool.uv]

[tool.pyright]
include = ["src", "main.py"]
extraPaths = ["src"]
